# educator-prime

./: .dockerignore  .gitignore  Dockerfile  README.md  plan-error-screens.md  plan-image-grading.md  plan-observability.md  plan-queue-management.md
apps/api/: .env.example  grading_surface_after.json  openapi.snapshot.json  pyproject.toml
apps/api/config/: llm-model-overrides.json
apps/api/scripts/: encrypt_existing_credentials.py  export_openapi.py  grading_surface.py  route_snapshot.py  smoke_litellm_grading.py
apps/api/src/classroom_downloader/: __init__.py  content_extraction.py  database.py  google_provider.py  google_scopes.py  grading.py  grading_engine.py  image_preprocessing.py  litellm_engine.py  llm_catalog.py  llm_errors.py  main.py  (+9 more)
apps/api/tests/: conftest.py  corpus.py  grading_helpers.py  test_admin_api.py  test_api.py  test_content_extraction.py  test_credentials_crypto.py  test_database.py  test_error_contract.py  test_google_errors.py  test_google_provider_units.py  test_google_real_provider.py  test_google_scopes.py  test_grading.py  test_grading_criteria.py  test_grading_outliers.py  test_grading_privacy.py  test_grading_resume.py  test_grading_streams.py  test_image_preprocessing.py  test_litellm_engine.py  test_litellm_live.py  test_llm_catalog.py  test_llm_errors.py  test_llm_payloads.py  test_naming.py  test_oauth_callback.py  test_observability.py  test_observability_sink.py  test_office_extraction.py  test_openapi_snapshot.py  test_privacy.py  test_queue_management_api.py  test_sentry_init.py  test_vision_live.py  test_zip_extraction.py
(+261 files in other folders)
