[project]
name = "educator-prime-api"
version = "0.1.0"
description = "FastAPI backend for Educator Prime"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "cryptography>=43.0.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "pydantic-settings>=2.4.0",
  "rich>=13.9.0",
  "python-multipart>=0.0.9",
  "google-api-python-client>=2.170.0",
  "google-auth>=2.40.0",
  "google-auth-oauthlib>=1.2.0",
  "litellm>=1.80.0",
  # Not a hard dependency of litellm >=1.86, but its completion_with_retries path
  # (triggered whenever we pass num_retries and a call hits a transient error)
  # does `import tenacity` and crashes without it.
  "tenacity>=8.0.0",
  "python-dotenv>=1.0.0",
  "pillow>=12.2.0",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0",
  "python-pptx>=1.0.0",
  "sentry-sdk[fastapi]>=2.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
